Archive2/ed/451463d89faa85/output
main.cpp:3:1: error: expected initializer before 'printf'
 printf("hello world")
 ^
main.cpp:4:1: error: expected declaration before '}' token
 }
 ^
